syntax = "proto3";

package api.v1.confd;
option go_package = "grape/api/v1/confd";

message FileConfig {
  string name = 1;
  string path = 2;
  string content = 3;
}

enum RestartType {
  None = 0;
  WriteFiles = 1;
  Kill = 2;
  Command = 3;
}

message Configs {
  string version = 1;
  string group = 2;
  string runCmd = 3;
  repeated FileConfig fileConfigs = 4;
  RestartType restartType = 5;
  string restartCommand = 6;
}

message Project {
  string version = 1;
  string name = 2;
  int32 nodeUpdateInterval = 3;
  map<string, Configs> groupConfigs = 4;
}